# iron-staticfile-middleware

./: .gitignore  Cargo.toml  Makefile  README.md
example/src/: main.rs
src/: guess_content_type.rs  helpers.rs  http_to_https_redirect.rs  lib.rs  modify_with.rs  partial_file.rs  prefix.rs  rewrite.rs  staticfile.rs
