[package]
name = "iron_staticfile_middleware"
version = "0.4.0"
authors = ["Jose Quintana <https://git.io/joseluisq>"]

[dependencies]
iron = "0.6"
log = "0.4"
mime = "0.2"
mime_guess = "1.8"
rustc-serialize = "0.3"
time = "0.1"
url = "1.4"

[dev-dependencies]
hyper = "0.10.4"
iron-test = "0.6.0"
tempdir = "0.3.5"

[profile.release]
lto = true
